ajout collapse finalisation footer finalisation navigation finalisation home finalisation not found ajout script font awesome

--- a/src/styles/components/navigation.css
+++ b/src/styles/components/navigation.css
@@ -8,6 +8,11 @@
 .navigation ul {
 list-style-type: none;
 display: flex;
-gap: 10px;
-border: none;
+gap: 30px;
+font-weight: 500;
 }
+
+.navigation li {
+    color: black;
+}
+
