site finalisé avant refactor scss fix footer et header style correspondant aux maquettes

--- a/src/styles/components/navigation.css
+++ b/src/styles/components/navigation.css
@@ -1,18 +1,43 @@
 .navigation {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .navigation ul {
-list-style-type: none;
-display: flex;
-gap: 30px;
-font-weight: 500;
+  list-style-type: none;
+  display: flex;
+  gap: 30px;
+  font-weight: 500;
 }
 
-.navigation li {
-    color: black;
+.nav-link {
+  text-decoration: none;
+  color: black;
+  text-wrap: nowrap;
 }
 
+.active-link {
+  text-decoration: underline;
+}
+
+@media (max-width: 767.98px) {
+  .navigation {
+    padding: 25px;
+  }
+
+  .nav-link {
+    text-transform: uppercase;
+    padding-left: 5px;
+    font-size: 0.75rem;
+  }
+
+  .logo img {
+    width: 80%;
+  }
+
+  .navigation ul {
+    padding-left: 0;
+  }
+}
