--- a/src/styles/components/collapse.css
+++ b/src/styles/components/collapse.css
@@ -21,8 +21,7 @@
     text-align: left;
     color: white;
     height: 50px;
-    /* border-radius: 10px;
-    font-size: 1.5rem; */
+    border-radius: 5px;
     font-weight: 700;
     padding-left: 20px;
     padding-right: 20px;
