--- a/src/styles/components/footer.css
+++ b/src/styles/components/footer.css
@@ -1,15 +1,23 @@
 .footer {
-    margin-top: 40px;
-    padding: 30px;
-    background-color: black;
-    height: 100px;
-    color: var(--main-white);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  margin-top: 40px;
+  padding: 30px;
+  background-color: black;
+  height: 100px;
+  color: var(--main-white);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.footer img {
+  height: 30px;
+}
+
+/* media querries */
+@media (max-width: 767.98px) {
+  .copyright span {
+    display: block;
+    margin-top: 5px;
   }
-  
-  .footer img {
-    height: 30px;
-  }
+}
