Style transformations fichier css en scss changement noms fichier css en scss dans fichier js ajout sass ajout main.scss respect pratique scss

--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -1,9 +1,11 @@
+@use "../base/variables" as base;
+
 .footer {
   margin-top: 40px;
   padding: 30px;
   background-color: black;
   height: 100px;
-  color: var(--main-white);
+  color: base.$main-white;
   display: flex;
   justify-content: center;
   align-items: center;
